2013-11-21  tino

	* [r9406] manual/rules.xml, scripts/cg3-autobin.pl,
	  src/GrammarApplicator.hpp, src/GrammarApplicator_reflow.cpp,
	  src/GrammarApplicator_runRules.cpp, src/Strings.cpp,
	  src/Strings.hpp, src/TextualParser.cpp, src/version.hpp,
	  test/T_BasicAppend/expected.txt, test/T_BasicAppend/grammar.cg3,
	  test/T_BasicAppend/run.pl: COPY now has an EXCEPT clause (WIP,
	  only takes raw tags)

2013-11-19  tino

	* [r9401] src/ApertiumApplicator.cpp, src/FSTApplicator.cpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/GrammarApplicator_runGrammar.cpp,
	  src/GrammarApplicator_runRules.cpp, src/MatxinApplicator.cpp,
	  src/NicelineApplicator.cpp, src/PlaintextApplicator.cpp,
	  src/Tag.cpp: Fix everything clang-analyzer complained about

2013-11-18  tino

	* [r9398] CMakeLists.txt, src/CMakeLists.txt, src/CompositeTag.hpp,
	  src/Rule.hpp, src/Tag.hpp: CMake script cleanup

2013-11-17  tino

	* [r9397] test/T_RemCohort/run.pl, test/T_Unification/run.pl: diff
	  -Z is not always available, so use -b
	* [r9396] scripts/cg3-autobin.pl,
	  src/GrammarApplicator_runRules.cpp, src/sorted_vector.hpp,
	  src/version.hpp, test/T_RemCohort/expected.txt,
	  test/T_RemCohort/grammar.cg3, test/T_RemCohort/input.txt,
	  test/T_RemCohort/run.pl: Rem- and AddCohort now properly updates
	  the endtag marker <<<.

2013-11-15  tino

	* [r9378] scripts/cg3-autobin.pl, src/GrammarApplicator_reflow.cpp,
	  src/GrammarApplicator_runContextualTest.cpp, src/version.hpp,
	  test/T_Unification/expected.txt, test/T_Unification/grammar.cg3,
	  test/T_Unification/run.pl: If a test does not succeed, discard
	  any captures performed by that test.

2013-11-13  tino

	* [r9374] scripts/cg3-autobin.pl, src/GrammarApplicator.cpp,
	  src/GrammarApplicator.hpp, src/main.cpp, src/options.hpp,
	  src/version.hpp, test/T_AnyMinusSome/input.txt,
	  test/T_AnyMinusSome/run.pl: Added --unique-tags

2013-11-12  tino

	* [r9366] get-boost.sh: Boost 1.55.0

2013-11-08  tino
